SERVER-33959 Avoid deadlock during global cursor registration